--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{ site.description }}">
+  <!--meta name="description" content="{{ site.description }}" -->
+   <span class="ityped-cursor"></span>
+    </div>
+    <ul id="typing-carousel-data">
+      {{ range site.description }}
 
   <title>{{ site.title }}</title>
   <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
