--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--meta name="description" content="{{ site.description }}" -->
-   <span class="ityped-cursor"></span>
-    </div>
-    <ul id="typing-carousel-data">
-      {{ range range .Site.Params.description }}
+  <ul id="typing-carousel-data">
+      {{ range .Site.Params.description }}
+      <li>{{ . }}</li>
+      {{ end }}
+    </ul>
 
   <title>{{ site.title }}</title>
   <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
