--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
       <span class="ityped-cursor"></span>
    </div>
    <ul id="typing-carousel-data">
-    {{ range .site.description }}
+    {{ range .Site.description }}
     <li>{{ . }}</li>
     {{ end }}
   </ul>
