--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{ site.description }}">
-
+  
+  <!--meta name="description" content="{{ site.description }}"-->
+  <h3>Hi, I'm</h3>
+    <h1 class="header-title-text type-animate">
+      <a href="" class="typewrite" data-period="2000" data-type='[ "Zeynel Batuhan Organ", "Data Scientist" ]'>
+        <span class="wrap"></span>
+      </a>&nbsp;
+  </h1>
 
   <title>{{ site.title }}</title>
   <link rel="shortcut icon" type="image/x-icon" href="{{ '/assets/favicon.ico' | relative_url }}">
